# horo-storage-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  env.example  log4rs.yaml.example
api/: Cargo.toml
api/src/: args.rs  cli.rs  config.rs  database.rs  error.rs  extractor.rs  handlers.rs  lib.rs  main.rs  middleware.rs  request.rs  response.rs  routers.rs  services.rs  state.rs  swagger.rs  utils.rs
api/src/handlers/: healthz.rs  horoscope.rs  native.rs  user.rs
api/src/request/: geo.rs  horoscope.rs  location.rs  native.rs  user.rs
api/src/response/: date_time_format.rs  horoscope.rs  native.rs  option_date_time_format.rs  user.rs
api/src/services/: horoscope.rs  user.rs
api/src/utils/: password_encoder.rs  token.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment_api.yaml  deployment_ui.yaml  hpa.yaml  ingress.yaml  service_api.yaml  service_ui.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
entity/: Cargo.toml
entity/src/entity/: geo.rs  horoscopes.rs  locations.rs  mod.rs  native.rs  prelude.rs  user.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240415_125551_seeding_data.rs  main.rs
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/src/app/: app.component.ts
ui/src/app/common/alert/: alert.component.ts
ui/src/app/common/page-change/: page-change.component.ts
ui/src/app/interfaces/: geo.ts  native.ts
ui/src/app/login/: login.component.ts
ui/src/app/resources/: resources.module.ts
ui/src/app/resources/home/: home.component.html  home.component.ts
ui/src/app/resources/natives/: natives.component.html  natives.component.ts
ui/src/app/resources/user/: user.component.ts
ui/src/app/services/api/: api.service.ts
ui/src/environments/: environment.development.ts
