[package]
 name = "storage_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
cors = ["dep:actix-cors"]

[dependencies]
entity = { path = "../entity" }

actix-cors = { version = "0.7.0", optional = true }
actix-web = "4.9.0"
# 加密
bcrypt = "0.15.1"

clap = { version = "4.5.19", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
# chrono={version="*",  features = ["serde"]}
dotenvy = "0.15.7"

log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }

actix-web-validator = "5.0.1"
validator = { version = "0.16.1", features = ["derive", "unic"] }

# swagger
utoipa = { version = "5.1.1", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "8.0.1", features = [
    "actix-web",
], optional = true }


sea-orm = { version = "1.0.1", features = [
    "sqlx-mysql",
    # "macros",
    "runtime-actix-native-tls",
    # "debug-print",
] }


jsonwebtoken = { version = "9.3.0", default-features = false }

futures-util = "0.3.31"
