[package]
name = "storage_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
swagger = ["dep:utoipa", "dep:utoipa-swagger-ui"]
cors = ["dep:actix-cors"]

[dependencies]
entity = { path = "../entity" }

actix-cors = { version = "0.7.0", optional = true }
actix-web = "4.9.0"
# 加密
bcrypt = "0.17.0"

clap = { version = "4.5.31", features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
# chrono={version="*",  features = ["serde"]}
dotenvy = "0.15.7"

log = "0.4.26"
log4rs = "1.3.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }

# actix-web-validator = "5.0.1"
actix-web-validator = { git = "https://github.com/wlhyl/actix-web-validator.git"}
validator = { version = "0.20.0", features = ["derive", "unic"] }

# swagger
utoipa = { version = "5.3.1", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "9.0.0", features = [
    "actix-web",
], optional = true }


sea-orm = { version = "1.1.7", features = [
    "sqlx-mysql",
    # "macros",
    "runtime-actix-native-tls",
    # "debug-print",
] }


jsonwebtoken = { version = "9.3.1", default-features = false }

futures-util = "0.3.31"
thiserror = "2.0.12"
